--- a/stylesheets/layout/_landing-page.scss
+++ b/stylesheets/layout/_landing-page.scss
@@ -18,6 +18,13 @@
 .container{
 	@include outer-container();
 }
+.header-line{
+	border-bottom: solid 1px rgba(80,80,80,0.5);
+	margin-bottom: 1.5em;
+}
+#responsive .header-line{
+	border-bottom: solid 1px rgba(255,255,255,0.5);
+}
 
 // LAYOUT - LANDING PAGE: HERO SECTION
 section#hero-home{
@@ -34,10 +41,13 @@ section#principles{
 	padding-right: 2em;
 }
 #principles h2{
+	// display: inline-block;
 	font-size: 1.5em;
+	// margin-bottom: 0 auto;
+	// text-align: center;
 	@include media($tablet) {
 		font-size: 2.5em;
-		margin-bottom: 2em;
+		margin-bottom: 0.5em;
 	}
 }
 #principles ul{
@@ -125,6 +135,10 @@ section#responsive{
 }
 #responsive{
 	// @include outer-container();
+	color: #fff;
+	h2{
+		color: #fff;
+	}
 }
 #responsive .column-1{
 	@include span-columns(12);
@@ -214,7 +228,7 @@ section#future-friendly{
 	// width: 100%;
 	margin: 0 0 1em 0;
 	@include media($screen) {
-		margin: 0 auto 2em auto;
+		margin: -0.5em auto 2em auto;
 		
 	}
 }
