--- a/stylesheets/modules/_browser.scss
+++ b/stylesheets/modules/_browser.scss
@@ -16,7 +16,7 @@ $browser-content-background-3: #F0F0F0;
 
   @include media($large-screen) {
     padding-top: 2em;
-    padding-top: 1.2em;
+    // padding-top: 1.2em;
   }
 }
 
