--- a/stylesheets/modules/_hero-landing.scss
+++ b/stylesheets/modules/_hero-landing.scss
@@ -9,7 +9,7 @@
 	pointer-events: none;
 	position: absolute;
 	top: 0;
-	width: 100%;
+	// width: 100%;
 	z-index: 5;
 }
 .text-overlay{
